fixing alignment to webflow nav

--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -180,6 +180,7 @@ body {
   min-width: 1000px;
   margin-right: auto;
   margin-left: auto;
+  margin-top: -4px;
   padding: 20px;
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
